refactor: rename HTTP API routes /kronk/v1 -> /koji/v1 and OpenAPI specs
